--- a/deploy/service.yaml
+++ b/deploy/service.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: jira-service
-          image: agardnerdt/kjiratemp4:0.8.0
+          image: adamgardnerdt/kjiratemp4:0.8.0
           ports:
             - containerPort: 8080
           env:
