--- a/deploy/service.yaml
+++ b/deploy/service.yaml
@@ -84,6 +84,8 @@ spec:
               value: 'http://1.2.3.4'
             - name: KEPTN_BRIDGE_URL
               value: 'http://1.2.3.4/bridge'
+            - name: SEND_EVENT
+              value: 'true'
             - name: DEBUG
               value: 'true'
               
