--- a/deploy/service.yaml
+++ b/deploy/service.yaml
@@ -111,7 +111,7 @@ spec:
             - name: PUBSUB_URL
               value: 'nats://keptn-nats-cluster'
             - name: PUBSUB_TOPIC
-              value: 'sh.keptn.>'
+              value: 'sh.keptn.event.evaluation.finished,sh.keptn.event.remediation.finished'
             - name: PUBSUB_RECIPIENT
               value: '127.0.0.1'
       serviceAccountName: keptn-default
